# aegis-vpn

./: .env.example  .gitignore  ANALYSIS_REPORT.md  AUDIT_COMPLETE.md  CONTRIBUTING.md  Cargo.toml  FIXES_SUMMARY.md  IMPLEMENTATION_BLUEPRINT.md  LICENSE  README.md  TASK_MANAGER.md  WINDOWS_FORENSIC_AUDIT_REPORT.md  WINDOWS_SECURITY_FIXES.md  WINDOWS_TASK_MANAGER.md
.github/workflows/: ci.yml
config/: control-plane.example.toml
crates/vpn-analytics/: Cargo.toml
crates/vpn-analytics/src/: events.rs  export.rs  lib.rs  metrics.rs
crates/vpn-config/: Cargo.toml
crates/vpn-config/src/: lib.rs
crates/vpn-config/tests/: config_integration.rs  identity_persistence.rs
crates/vpn-crypto/: Cargo.toml
crates/vpn-crypto/src/: lib.rs
crates/vpn-crypto/tests/: crypto_integration.rs  handshake_auth.rs
crates/vpn-daemon/: Cargo.toml
crates/vpn-daemon/src/: cleanup.rs  cleanup_manager.rs  config.rs  control_plane.rs  controller.rs  guards.rs  lib.rs  main.rs  runtime_mode.rs  service.rs  service_host.rs
crates/vpn-daemon/src/ha/: election.rs  ipc.rs  mod.rs  state.rs
crates/vpn-daemon/src/server/: mod.rs
crates/vpn-daemon/tests/: control_plane.rs
crates/vpn-enterprise/: Cargo.toml
crates/vpn-enterprise/src/: auth.rs  config.rs  gpo.rs  lib.rs  logging.rs  snmp.rs  tenant.rs  users.rs
crates/vpn-ipc/: Cargo.toml
crates/vpn-ipc/src/: lib.rs
crates/vpn-logger/: Cargo.toml
crates/vpn-logger/src/: events.rs  lib.rs
crates/vpn-ml/: Cargo.toml
crates/vpn-ml/src/: adaptive_kill_switch.rs  features.rs  lib.rs  path_selector.rs
crates/vpn-platform-linux/: Cargo.toml
crates/vpn-platform-linux/src/: lib.rs  server_nat.rs
crates/vpn-platform-windows/: Cargo.toml
crates/vpn-platform-windows/src/: admin.rs  lib.rs  service_installer.rs  wfp_native.rs
crates/vpn-platform-windows/tests/: windows_integration.rs  windows_validation.rs
crates/vpn-rotation/: Cargo.toml
crates/vpn-rotation/src/: lib.rs
crates/vpn-rotation/tests/: rotation_integration.rs
crates/vpn-routing/: Cargo.toml
crates/vpn-routing/src/: lib.rs
crates/vpn-routing/tests/: routing_integration.rs
crates/vpn-transport/: Cargo.toml
crates/vpn-transport/src/: lib.rs
crates/vpn-transport/tests/: frame_limits.rs
crates/vpn-tun/: Cargo.toml
crates/vpn-tun/src/: lib.rs
docs/: AUDIT.md  TESTING.md  UI_DEV_SETUP.md  mysql-schema.sql  server-nat.md
scripts/: mock-mcp.mjs  task-tracker.mjs
scripts/linux/: cleanup-server-nat.sh  setup-server-nat.sh
scripts/windows/: install-service.ps1  uninstall-service.ps1  validate-wfp.ps1
server/: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
ui/: eslint.config.js  index.html  package-lock.json  package.json  stitch-manifest.json  vite.config.ts
ui/scripts/: download-stitch-assets.mjs
ui/server/: index.mjs
ui/src/: App.tsx  styles.css  types.ts
ui/src/api/: client.ts
