[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
hkdf = "0.12"
hmac = "0.12"
ipnet = { version = "2.10", features = ["serde"] }
libc = "0.2"
libloading = "0.8"
parking_lot = "0.12"
rand = "0.8"
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "mysql"] }
thiserror = "1.0"
tokio = { version = "1.45", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Threading"] }
windows-service = "0.7"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
