[package]
name = "vpn-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes-gcm.workspace = true
anyhow.workspace = true
hex.workspace = true
hkdf.workspace = true
hmac.workspace = true
parking_lot.workspace = true
rand_core.workspace = true
serde.workspace = true
sha2.workspace = true
x25519-dalek.workspace = true
