[package]
name = "vpn-enterprise"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64 = "0.21"
hmac.workspace = true
parking_lot.workspace = true
rand.workspace = true
reqwest = { version = "0.12", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true

[features]
default = ["saml", "oidc"]

saml = []
oidc = []
ldap = []