[package]
name = "vpn-logger"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
mysql = ["dep:sqlx"]

[dependencies]
anyhow.workspace = true
hex.workspace = true
hmac.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx = { workspace = true, optional = true }
